# accounting

./: Cargo.toml
.github/workflows/: ci.yml  rustdoc-pages.yml
accounting-core/: Cargo.toml
accounting-core/src/: backend.rs  date.rs  error.rs  lib.rs  map.rs  public.rs  serde.rs
accounting-core/src/backend/: collection.rs  id.rs  query.rs  user.rs  version.rs
accounting-core/src/backend/query/: boolean.rs
accounting-core/src/public/: account.rs  amount.rs  transaction.rs
accounting-mongodb/: Cargo.toml
accounting-mongodb/src/: collection.rs
accounting-sql/: .env  Cargo.toml
accounting-sql/migrations/2023-07-24-001508_initial_schema/: down.sql  up.sql
accounting-sql/migrations/2023-07-27-004958_initial_schema/: down.sql  up.sql
accounting-sql/src/: index.rs  lib.rs  query.rs  query_index.rs  schema.rs
accounting-sql/src/query_index/: account.rs  group.rs  transaction.rs  user.rs
