[package]
name = "accounting-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accounting-core = { version = "0.1.0", path = "../accounting-core" }
async-trait = "0.1.68"
serde = "1.0.159"
serde_json = "1.0.103"
sqlx = "0.7.1"
