[package]
name = "accounting-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accounting-core = { version = "0.1.0", path = "../accounting-core", features = ["sqlx-postgres"] }
async-trait = "0.1.68"
futures = "0.3.28"
indexmap = "2.0.0"
serde = "1.0.159"
serde_json = "1.0.103"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = ["json", "postgres", "runtime-tokio", "tls-rustls"]
